--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -302,3 +302,12 @@
   journal={Proceedings of the Embedded Real Time Software and Systems Conference (ERTS), Toulouse, France},
   year={2012}
 }
+
+@inproceedings{NSDPTO16,
+  title={Missed Architectural Dependencies: The Elephant in the Room},
+  author={Nord, Robert and Sangwan, R and Delange, Julien and Feiler, Peter and Nathanael, Luke Thomas and Ozkaya, Ipekz},
+  booktitle={13th Working IEEE/IFIP Conference on Software Architecture},
+  institution={IEEE},
+  year={2016},
+  month={April}
+}
