add new article

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -303,9 +303,20 @@
   year={2012}
 }
 
+
+@inproceedings{NSDPTO16,
+  title={Integrated Modeling Workflow for Security Assurance},
+  author={Julien Delange, Min-Young Nam and Peter Feiler},
+  booktitle={ISoLA2016},
+  institution={Springer Verlag},
+  year={2016},
+  month={September}
+}
+
+
 @inproceedings{NSDPTO16,
   title={Missed Architectural Dependencies: The Elephant in the Room},
-  author={Nord, Robert and Sangwan, R and Delange, Julien and Feiler, Peter and Nathanael, Luke Thomas and Ozkaya, Ipekz},
+  author={Nord, Robert and Sangwan, R and Delange, Julien and Feiler, Peter and Nathanael, Luke Thomas and Ozkaya, Ipek},
   booktitle={13th Working IEEE/IFIP Conference on Software Architecture},
   institution={IEEE},
   year={2016},
