--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -1,3 +1,11 @@
+@book{AADLINPRACTICE,
+  title={{AADL In Practice}},
+  author={Julien Delange},
+  year={2017},
+  publisher={Reblochon Development Company}
+}
+
+
 @inproceedings{DPPKSK09,
   title={Validate, simulate, and implement ARINC653 systems using the AADL},
   author={Delange, Julien and Pautet, Laurent and Plantec, Alain and Kerboeuf, Mickael and Singhoff, Frank and Kordon, Fabrice},
